--- a/proyecto_final/reporte/reporte.tex
+++ b/proyecto_final/reporte/reporte.tex
@@ -83,8 +83,8 @@ realizaron las simulaciones correspondientes para cada modelo, para luego analiz
 \begin{description}[labelindent=1cm,labelwidth=2.25cm,align=left]
 %ponerlo en orden alfabetico
         \item[$L$] Lagrangiano de un sistema
-        \item[$T$] Energía cinética de un sistema
-        \item[$V$] Energía potencial de un sistema
+        \item[$K$] Energía cinética de un sistema
+        \item[$U$] Energía potencial de un sistema
         \item[$q_j$] Coordenada generalizada
         \item[$Q_j$] Fuerza generalizada
         \item[$n$] Cantidad de grados de libertad de un sistema
@@ -277,7 +277,7 @@ independientes entre sí \citep{fitzpatrick2011}. Por otro lado, los grados de li
 cantidad de coordenadas que pueden ser modificadas de manera independiente para determinar la
 configuración de los cuerpos en el sistema \citep{vandiver2011}.
 
-El Lagrangiano, definido como $L=T-V$, es función de las coordenadas generalizadas y de sus
+El Lagrangiano, definido como $L=K-U$, es función de las coordenadas generalizadas y de sus
 respectivas derivadas \citep{gavin2014}, tal como se muestra en la ecuación \ref{eq:lagrangian}, en
 donde $n$ es la cantidad de grados de libertad del sistema.
 
@@ -316,12 +316,12 @@ dichas energías para sistemas mecánicos.
 \label{tab:energias}
 \begin{tabular}{@{}ll@{}}
 \toprule
-\multicolumn{2}{l}{\textbf{Energía cinética (T)}} \\ \midrule
+\multicolumn{2}{l}{\textbf{Energía cinética (K)}} \\ \midrule
 Traslacional & $\frac{1}{2} m {\left\lVert \vec{v} \right\rVert}^2  $   \\ \midrule
 Rotacional & $\frac{1}{2} J {\omega}^2$ \\ \midrule
-\multicolumn{2}{l}{\textbf{Energía potencial (V)}} \\ \midrule
+\multicolumn{2}{l}{\textbf{Energía potencial (U)}} \\ \midrule
 Gravitacional & $mgh$ \\ \midrule
-Elástica (Resorte) & $\frac{1}{2}k{x}^2$ \\ \bottomrule
+Elástica (Resorte) & $\frac{1}{2}k{d}^2$ \\ \bottomrule
 \end{tabular}
 \end{table}
 
